<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#1F1F1F" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/h1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/chint1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#12ff51" />

        <TextView
            android:id="@+id/ch1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/code1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#e6e6e6" />

        <TextView
            android:id="@+id/h2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/chint2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#12ff51" />

        <TextView
            android:id="@+id/ch2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/code2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#e6e6e6" />

        <TextView
            android:id="@+id/h3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/chint3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#12ff51" />

        <TextView
            android:id="@+id/ch3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/code3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#e6e6e6" />
    </LinearLayout>

</ScrollView>